# wxyz

./: .buildinfo  .eslint.tsconfig.json  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .pylintrc  .readthedocs.yml  .yarnrc  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  anaconda-project.yml  azure-pipelines.yml  developing.html  dodo.py  environment.yml  gallery.html  genindex.html  index.html  labex.txt  lerna.json  objects.inv  package.json  postBuild  py-modindex.html  search.html  searchindex.js  setup.cfg  sitemap.xml  tsconfig.json  tsconfig.typedoc.json  tslint.json  typedoc.json  widgets.html
.binder/: environment.yml  labex.txt  (+1 more)
src/py/wxyz_json_e/: LICENSE.txt  README.md  setup.cfg  setup.py
src/py/wxyz_json_e/src/wxyz/json_e/: __init__.py  _version.py  base.py  widget_jsone.py
src/py/wxyz_lab/: MANIFEST.in  README.md  setup.cfg
src/py/wxyz_lab/src/wxyz/lab/: __init__.py  _version.py  base.py  widget_blueprint.py  widget_dock.py  widget_editor.py  widget_logger.py  widget_markdown.py  widget_term.py
src/py/wxyz_notebooks/: MANIFEST.in  README.md  setup.cfg
src/py/wxyz_notebooks/src/wxyz/notebooks/: Utils.ipynb  __init__.py  _version.py  index.ipynb
src/py/wxyz_notebooks/src/wxyz/notebooks/API/: JSON Schema Form.ipynb  JSON.ipynb
src/py/wxyz_notebooks/src/wxyz/notebooks/Design/: DVCS.ipynb  Tribbles.ipynb
src/py/wxyz_notebooks/src/wxyz/notebooks/Design/DVCS/: App.ipynb  Git.ipynb  Simple Example.ipynb  Tools.ipynb  Trackers.ipynb  index.ipynb
src/py/wxyz_notebooks/src/wxyz/notebooks/Examples/: DataGrid.ipynb  Dock Panel.ipynb  Editor.ipynb  Filing.ipynb  Full Screen.ipynb  Git I.ipynb  Git II.ipynb  Git III.ipynb  Hello Worlds.ipynb  JSON Schema Form.ipynb  JSON Tricks.ipynb  JSON-E.ipynb  JSON-LD Playground.ipynb  SKWXYZ.ipynb  SVG.ipynb  SelectGrid.ipynb  StyleGrid I.ipynb  StyleGrid II.ipynb  TPOTWXYZ.ipynb  Terminal.ipynb
src/py/wxyz_notebooks/src/wxyz/notebooks/tests/: conftest.py  test_nbconvert.py
src/py/wxyz_tpl_jinja/: README.md  setup.cfg
src/py/wxyz_tpl_jinja/src/wxyz/tpl_jinja/: __init__.py  _version.py  base.py  widget_template.py
src/py/wxyz_yaml/: README.md  setup.cfg
src/py/wxyz_yaml/src/wxyz/yaml/: __init__.py  _version.py  base.py  widget_yaml.py
src/wxyz_core/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
src/wxyz_core/src/wxyz/core/: __init__.py  _version.py  base.py  install.json  widget_json.py
src/wxyz_core/src/wxyz/core/js/: README.md  package.json  tsconfig.json
src/wxyz_core/src/wxyz/core/js/src/: index.ts
src/wxyz_core/src/wxyz/core/js/src/widgets/: _base.ts  json.ts
src/wxyz_datagrid/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
src/wxyz_datagrid/src/wxyz/datagrid/: __init__.py  _version.py  install.json  widget_datagrid.py  widget_selectgrid.py  widget_stylegrid.py
src/wxyz_datagrid/src/wxyz/datagrid/js/: README.md  package.json  tsconfig.json
src/wxyz_datagrid/src/wxyz/datagrid/js/src/: plugin.ts
src/wxyz_datagrid/src/wxyz/datagrid/js/src/widgets/: datagrid.ts  selectgrid.ts  stylegrid.ts
src/wxyz_dvcs/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
src/wxyz_dvcs/src/wxyz/dvcs/: __init__.py  _version.py  install.json  widget_watch.py
src/wxyz_dvcs/src/wxyz/dvcs/js/: README.md  package.json
src/wxyz_dvcs/src/wxyz/dvcs/js/src/: plugin.ts
src/wxyz_dvcs/src/wxyz/dvcs/js/src/widgets/: dvcs.ts
src/wxyz_dvcs/src/wxyz/dvcs/repos/: repo_base.py  repo_git.py
src/wxyz_dvcs/src/wxyz/dvcs/tools/: tool_commits.py  tool_heads.py  tool_remotes.py  tool_timetravel.py  utils.py
src/wxyz_dvcs/src/wxyz/dvcs/trackers/: tracker_json.py  tracker_yaml.py
src/wxyz_json_e/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
src/wxyz_json_e/src/wxyz/json_e/: __init__.py  _version.py  install.json  widget_jsone.py
src/wxyz_json_e/src/wxyz/json_e/js/: README.md  package.json
src/wxyz_json_e/src/wxyz/json_e/js/src/: codemirror-yaml.d.ts  index.ts  plugin.ts
src/wxyz_json_e/src/wxyz/json_e/js/src/widgets/: index.ts  jsone.ts
src/wxyz_notebooks/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
src/wxyz_notebooks/src/wxyz/notebooks/: Utils.ipynb  __init__.py  _version.py  index.ipynb
src/wxyz_notebooks/src/wxyz/notebooks/API/: JSON Schema Form.ipynb  JSON-LD.ipynb  JSON.ipynb
src/wxyz_notebooks/src/wxyz/notebooks/Design/: Tribbles.ipynb
src/wxyz_notebooks/src/wxyz/notebooks/Design/DVCS/: App.ipynb  Simple Example.ipynb  index.ipynb
src/wxyz_notebooks/src/wxyz/notebooks/Examples/: DataGrid.ipynb  Dock Panel.ipynb  Editor.ipynb  Filing.ipynb  Full Screen.ipynb  Git I.ipynb  Git II.ipynb  Git III.ipynb  Hello Worlds.ipynb  JSON Schema Form.ipynb  JSON Tricks.ipynb  JSON-E.ipynb  JSON-LD Playground.ipynb  Markdown.ipynb  SVG.ipynb  SelectGrid.ipynb  StyleGrid I.ipynb  StyleGrid II.ipynb  Terminal.ipynb
src/wxyz_notebooks/src/wxyz/notebooks/js/: package.json  tsconfig.json
src/wxyz_notebooks/src/wxyz/notebooks/js/src/: tsconfig.json  widgets.ts
src/wxyz_notebooks/src/wxyz/notebooks/tests/: conftest.py  test_nbconvert.py
src/wxyz_svg/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
src/wxyz_svg/src/wxyz/svg/: __init__.py  _version.py  base.py  install.json  widget_svg.py
src/wxyz_svg/src/wxyz/svg/js/: README.md  package.json
src/wxyz_svg/src/wxyz/svg/js/src/: plugin.ts
src/wxyz_svg/src/wxyz/svg/js/src/widgets/: svg.ts
src/wxyz_tpl_jinja/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
src/wxyz_tpl_jinja/src/wxyz/tpl_jinja/: __init__.py  _version.py  base.py  install.json  widget_template.py
src/wxyz_tpl_jinja/src/wxyz/tpl_jinja/js/: README.md  package.json
src/wxyz_tpl_jinja/src/wxyz/tpl_jinja/js/src/: tsconfig.json
src/wxyz_tpl_jinja/src/wxyz/tpl_jinja/js/src/widgets/: template.ts
src/wxyz_yaml/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
src/wxyz_yaml/src/wxyz/yaml/: __init__.py  _version.py  install.json  widget_yaml.py
src/wxyz_yaml/src/wxyz/yaml/js/: README.md  package.json
src/wxyz_yaml/src/wxyz/yaml/js/src/widgets/: yaml.ts
(+624 files in other folders)
