[metadata]
name = ipywidjucks
version = 0.1.0
description = jinja2 Jupyter widgets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deathbeds/widjucks
author = dead pixels collective
author_email = ripxl@googlegroups.com
license = BSD-3-Clause
keywords =
    Interactive
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
install_requires =
    ipywidgets
    jinja2
package_dir =
    = src/py
packages = find:
include_package_data = True
zip_safe = False


[options.packages.find]
where =
    src/py


[aliases]
test = pytest

[flake8]
exclude = .git,__pycache__
max-complexity = 12

[isort]
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200
not_skip = __init__.py

[yapf]
based_on_style = pep8
allow_split_before_dict_value = False
allow_multiline_lambdas = True
coalesce_brackets = True
dedent_closing_brackets = True
join_multiple_lines = False
space_between_ending_comma_and_closing_bracket = True
split_arguments_when_comma_terminated = True
split_before_expression_after_opening_paren = True
split_before_first_argument = True
split_complex_comprehension = True
