[metadata]
name = ipywidjucks
version = 0.1.0
description = jinja2 Jupyter widgets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deathbeds/widjucks
author = dead pixels collective
author_email = ripxl@googlegroups.com
license = BSD-3-Clause
keywords =
    Interactive
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
install_requires =
    ipywidgets
    jinja2
package_dir =
    = src/py
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where =
    src/py

[flake8]
exclude = .git,__pycache__,envs
max-line-length = 88
