[metadata]
name = wxyz_dvcs
version = 0.4.1
description = experimental Jupyter widgets for working with data in revision control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://deathbeds.github.io/wxyz
project_urls =
    Bug Tracker     = https://github.com/deathbeds/wxyz/issues
    Changelog       = https://github.com/deathbeds/wxyz/blob/master/CHANGELOG.md
    CI              = https://dev.azure.com/nickbollweg/deathbeds/_build/latest?definitionId=6&branchName=master
    Documentation   = https://deathbeds.github.io/wxyz
    Releases        = https://github.com/deathbeds/wxyz/releases
    Source Code     = https://github.com/deathbeds/wxyz

author = wxyz contributors
author_email = ripxl@googlegroups.com
license = BSD-3-Clause
keywords =
    Interactive
license_file = src/wxyz/dvcs/js/LICENSE.txt
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
python_requires = >=3.6
install_requires =
    watchgod
    wxyz_core >=0.4,<0.5
package_dir =
    = src
packages =
    wxyz.dvcs
    wxyz.dvcs.trackers
    wxyz.dvcs.tools
    wxyz.dvcs.repos
include_package_data = True
zip_safe = False

[options.extras_require]
git =
    gitpython
yaml =
    pyyaml
toml =
    toml

[options.packages.find]
where =
    src

[flake8]
exclude = .git,__pycache__,envs
max-line-length = 88
