[metadata]
name = wxyz_notebooks
description = notebook demos for experimental Jupyter widgets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://deathbeds.github.io/wxyz
project_urls =
    Bug Tracker     = https://github.com/deathbeds/wxyz/issues
    Changelog       = https://github.com/deathbeds/wxyz/blob/master/CHANGELOG.md
    CI              = https://dev.azure.com/nickbollweg/deathbeds/_build/latest?definitionId=6&branchName=master
    Documentation   = https://deathbeds.github.io/wxyz
    Releases        = https://github.com/deathbeds/wxyz/releases
    Source Code     = https://github.com/deathbeds/wxyz

author = wxyz contributors
author_email = ripxl@googlegroups.com
license = BSD-3-Clause
keywords =
    Interactive
license_file = src/wxyz/notebooks/js/LICENSE.txt
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
python_requires = >=3.6
install_requires =
    importnb
    wxyz_core >=0.4,<0.5
    wxyz_datagrid >=0.4,<0.5
    wxyz_dvcs >=0.4,<0.5
    wxyz_html >=0.4,<0.5
    wxyz_json_e >=0.4,<0.5
    wxyz_json_schema_form >=0.4,<0.5
    wxyz_jsonld >=0.4,<0.5
    wxyz_lab >=0.4,<0.5
    wxyz_svg >=0.4,<0.5
    wxyz_tpl_jinja >=0.4,<0.5
    wxyz_yaml >=0.4,<0.5
package_dir =
    = src
packages =
    wxyz.notebooks
    wxyz.notebooks.API
    wxyz.notebooks.Design
    wxyz.notebooks.Examples
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    pytest

[options.packages.find]
where =
    src

[flake8]
exclude = .git,__pycache__,envs
max-line-length = 88

[tool:pytest]
junit_family = xunit2
