[metadata]
name = wxyz_json_e
version = 0.4.0
description = experimental Jupyter widgets for JSON-E
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deathbeds/wxyz
author = wxyz contributors
author_email = ripxl@googlegroups.com
license = BSD-3-Clause
keywords =
    Interactive
license_file = LICENSE.txt
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
python_requires = >=3.6
install_requires =
    wxyz_core
    json-e >=4.3,<5

package_dir =
    = src
packages =
    wxyz.json_e
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    pytest

[options.packages.find]
where =
    src

[flake8]
exclude = .git,__pycache__,envs
max-line-length = 88
