[metadata]
name = wxyz_lab
version = 0.4.0
description = experimental Jupyter widgets for JupyterLab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deathbeds/wxyz
author = wxyz contributors
author_email = ripxl@googlegroups.com
license = BSD-3-Clause
keywords =
    Interactive
license_file = LICENSE.txt
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
python_requires = >=3.6
install_requires =
    wxyz_core
package_dir =
    = src
packages =
    wxyz.lab
include_package_data = True
zip_safe = False

[options.packages.find]
where =
    src

[flake8]
exclude = .git,__pycache__,envs
max-line-length = 88
