[metadata]
name = wxyz_notebooks
version = 0.4.0
description = notebook demos for experimental Jupyter widgets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deathbeds/wxyz
author = wxyz contributors
author_email = ripxl@googlegroups.com
license = BSD-3-Clause
keywords =
    Interactive
license_file = LICENSE.txt
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
python_requires = >=3.6
install_requires =
    importnb
    wxyz_core
    wxyz_datagrid
    wxyz_dvcs
    wxyz_html
    wxyz_json_e
    wxyz_json_schema_form
    wxyz_jsonld
    wxyz_lab
    wxyz_svg
    wxyz_tpl_jinja
    wxyz_yaml
package_dir =
    = src
packages =
  wxyz.notebooks
  wxyz.notebooks.API
  wxyz.notebooks.Design
  wxyz.notebooks.Examples
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    pytest

[options.packages.find]
where =
    src

[flake8]
exclude = .git,__pycache__,envs
max-line-length = 88

[tool:pytest]
junit_family = xunit2
