[metadata]
name = wxyz_tpl_jinja
version = 0.1.0
description = experimental Jupyter widgets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deathbeds/wxyz
author = dead pixels collective
author_email = ripxl@googlegroups.com
license = BSD-3-Clause
keywords =
    Interactive
license_file = LICENSE.txt
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
install_requires =
    ipywidgets
package_dir =
    = src
packages =
  wxyz.tpl_jinja
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    jinja2
    jsonpointer
    jsonschema
    pyld
    pytest

[options.packages.find]
where =
    src

[flake8]
exclude = .git,__pycache__,envs
max-line-length = 88
